Добавляет базовую верстку

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,4 @@
-$secondary-font: Arial, Helvetica, sans-serif;
+$secondary-font: "Arial", "Helvetica", sans-serif;
 $color-font: #444444;
 $color-accent: #68b738;
 $color-accent-hover: #5eaa2f;
