--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -2,6 +2,5 @@
 .map {
   height: 362px;
   margin: 0 auto;
-  background-repeat: no-repeat;
-  background: #fdf7ef url("../img/bg-map-mobile@1x.png");
+  background: #fdf7ef url("../img/bg-map-mobile@1x.png") no-repeat;
 }
