--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,12 +1,13 @@
-//page-main
 .page-main__title {
-  color: #fff;
+  color: #ffffff;
   font-size: 36px;
   text-align: center;
 }
+
 .page-main__slogan {
   line-height: 14px;
   font-size: 14px;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
 }
+//page-main
