--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,15 +1,9 @@
-//site-list
-.site-list__item {
-
-}
-//site-list__item--active
 .site-list__link {
   display: block;
   padding-top: 23px;
   padding-right: 20px;
   padding-bottom: 23px;
   padding-left: 20px;
-
   font-weight: 500;
   font-size: 20px;
   line-height: 1.3;
@@ -18,3 +12,8 @@
   text-transform: uppercase;
   text-decoration: none;
 }
+
+//site-list
+// .site-list__item {
+// }
+//site-list__item--active
