--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -4,6 +4,6 @@ html {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.3;
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   color: $color-font;
 }
