--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -2,6 +2,8 @@
   color: #ffffff;
   font-size: 36px;
   text-align: center;
+  line-height: 36px;
+  font-weight: 400;
 }
 
 .page-main__slogan {
@@ -9,5 +11,9 @@
   font-size: 14px;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+.page-main__image {
+  margin: 0 auto;
 }
 //page-main
