--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -13,7 +13,20 @@
   text-decoration: none;
 }
 
-//site-list
+.site-list {
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
+}
+
+.site-list__item {
+  border-top: 1px solid #e6e6e6;
+
+  &:last-child {
+    border-bottom: none;
+  }
+}
 // .site-list__item {
 // }
 //site-list__item--active
