--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,19 +1,3 @@
-.page-main__title {
-  color: #ffffff;
-  font-size: 36px;
-  text-align: center;
-  line-height: 36px;
-  font-weight: 400;
+.page-main {
+  flex-grow: 1;
 }
-
-.page-main__slogan {
-  line-height: 14px;
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.page-main__image {
-  margin: 0 auto;
-}
-//page-main
