--- a/source/sass/blocks/page-wrapper.scss
+++ b/source/sass/blocks/page-wrapper.scss
@@ -1,3 +1,20 @@
 .page-wrapper {
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: $desktop-width) {
+  .page-wrapper--index {
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: -1;
+      width: 50%;
+      height: 696px;
+      background: $color-index-bg url("../img/index-background-desktop@1x.jpg") no-repeat right top;
+    }
+  }
 }
