--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -30,3 +30,53 @@
 // .site-list__item {
 // }
 //site-list__item--active
+
+@media (min-width: $tablet-width)  {
+  .site-list__item {
+    border-top: none;
+  }
+
+  .site-list__link {
+    margin-left: 24px;
+    padding: 0;
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.4;
+
+    &--active {
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 100%;
+        height: 2px;
+        background: $color-accent;
+      }
+    }
+  }
+
+  .site-list__link[href] {
+    transition: opacity ease 0.1s;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .site-list__link {
+    color: #ffffff;
+  }
+
+  .site-list_link--active::before {
+    background: #ffffff;
+  }
+}
