--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -7,9 +7,7 @@
   padding-right: 41px;
   padding-bottom: 22px;
   padding-left: 62px;
-
   list-style-type: none;
-
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
 }
@@ -26,23 +24,16 @@
   }
 }
 
-.social__icon {
-  display: block;
+@media (min-width: $tablet-width) {
+  .social {
+    justify-content: flex-start;
+    margin: 0;
+    margin-left: 52px;
+    padding-top: 0;
+    padding-right: 72px;
+    padding-bottom: 0;
 
-  fill: #666666;
-
-  &--vkontakte {
-    width: 30px;
-    height: 15px;
-  }
-
-  &--instagram {
-    width: 23px;
-    height: 23px;
-  }
-
-  &--facebook {
-    width: 13px;
-    height: 27px;
+    border-top: none;
+    border-bottom: none;
   }
 }
