--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/page-footer";
 @import "blocks/social";
 @import "blocks/copyright.scss";
+@import "blocks/cat-programm.scss";
 @import "blocks/page-form.scss";
 @import "blocks/product-catalog.scss";
 @import "blocks/additional-products.scss";
