--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,3 +4,9 @@ $color-accent: #68b738;
 $color-accent-hover: #5eaa2f;
 $color-gray: #f2f2f2;
 $color-gray-hover: #ebebeb;
+$color-white: #ffffff;
+$color-black: #000000;
+$color-index-bg:#64a83b;
+$tablet-width: 768px;
+$desktop-width: 1300px;
+$mobile-width-only: 767px;
