--- a/source/sass/blocks/logo-footer.scss
+++ b/source/sass/blocks/logo-footer.scss
@@ -1,9 +1,20 @@
 //logo-footer
 //logo-footer__image
+
 .logo-footer {
   display: block;
+
+  .logo-footer__image {
+    margin: 0 auto;
+  }
 }
 
-.logo-footer__image {
-  margin: 0 auto;
+@media (min-width: $tablet-width) {
+  .logo-footer {
+    transition: opacity ease 0.3s;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
 }
