--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -8,7 +8,7 @@
 
 .page-header {
   padding-top: 15px;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid $color-border;
 }
 
 @media (min-width: $tablet-width) {
