--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
 html {
   min-width: 320px;
   height: 100%;
@@ -6,4 +13,11 @@ html {
   line-height: 1.3;
   font-family: "Oswald", "Arial", sans-serif;
   color: $color-font;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border-style: none;
 }
