--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,7 @@ $color-gray-hover: #ebebeb;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-index-bg:#64a83b;
+$color-border: #e6e6e6;
 $tablet-width: 768px;
 $desktop-width: 1300px;
 $mobile-width-only: 767px;
