--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,3 +11,5 @@ $color-border: #e6e6e6;
 $tablet-width: 768px;
 $desktop-width: 1300px;
 $mobile-width-only: 767px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
