--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,24 +2,30 @@
 @import "variables";
 @import "fonts";
 @import "global";
+@import "blocks/button";
+@import "blocks/content-title.scss";
 @import "blocks/page-wrapper";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
 @import "blocks/page-main";
 @import "blocks/advertising";
-@import "blocks/button";
 @import "blocks/cases.scss";
 @import "blocks/advantages.scss";
 @import "blocks/story.scss";
 @import "blocks/slider.scss";
 @import "blocks/contacts.scss";
 @import "blocks/map.scss";
-@import "blocks/logo-footer.scss";
+@import "blocks/logo-page.scss";
 @import "blocks/page-footer";
 @import "blocks/social";
 @import "blocks/copyright.scss";
 @import "blocks/cat-programm.scss";
 @import "blocks/page-form.scss";
+@import "blocks/field-text.scss";
+@import "blocks/field-radio.scss";
+@import "blocks/field-checkbox.scss";
+@import "blocks/field-actions.scss";
 @import "blocks/product-catalog.scss";
+@import "blocks/product-table.scss";
 @import "blocks/additional-products.scss";
