--- a/source/sass/blocks/story.scss
+++ b/source/sass/blocks/story.scss
@@ -98,7 +98,7 @@
   .story__fact-amount {
     font-size: 14px;
     line-height: 1.4;
-    font-family: "Oswald", Arial, sans-serif;
+    font-family: "Oswald", "Arial", sans-serif;
     color: #000000;
     text-transform: uppercase;
   }
@@ -147,7 +147,7 @@
       padding-right: 8px;
       padding-left: 8px;
       white-space: nowrap;
-      background: #fff;
+      background: #ffffff;
     }
   }
 
@@ -168,10 +168,13 @@
     }
   }
 }
+
 @media (min-width: $desktop-width) {
   .story {
-    background-image: linear-gradient(
-      to bottom, #ffffff 190px, transparent 190px),
+    background-image: linear-gradient (
+      to bottom,
+      #ffffff 190px,
+      transparent 190px),
       linear-gradient(to right, $color-gray 50%, #eaeaea 50%);
   }
 
@@ -201,9 +204,7 @@
 
   .story__fact--cell {
     width: 162px;
-  }
 
-  .story__fact--cell {
     .story__fact-name {
       background-color: $color-gray;
     }
