--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -3,8 +3,16 @@
 }
 
 .additional-products__block-title {
+  // display: flex;
+  // margin: 0 0 28px;
+  // padding-left: 20px;
+  // font-weight: 400;
+  // font-size: 24px;
+  // line-height: 1;
+  // color: #000000;
+
   display: flex;
-  margin: 0 0 28px;
+  margin: 0 0 37px;
   padding-left: 20px;
   font-weight: 400;
   font-size: 24px;
@@ -31,14 +39,19 @@
 
 .additional-products__list {
   margin: 0;
-  margin-bottom: 39px;
+  margin-bottom: 36px;
   padding: 0;
   list-style-type: none;
 }
 
 .additional-products__item {
-  padding-top: 14px;
-  padding-bottom: 17px;
+  // padding-top: 14px;
+  // padding-bottom: 17px;
+  // border-bottom: 1px solid #cdcdcd;
+
+  max-height: 130px;
+  padding-top: 12px;
+  padding-bottom: 18px;
   border-bottom: 1px solid #cdcdcd;
 
   &:first-child {
@@ -64,10 +77,6 @@
   text-transform: uppercase;
 }
 
-// .additional-products__desc {
-//   width: 50%;
-// }
-
 .additional-products__gift {
   display: flex;
   flex-direction: column;
@@ -77,7 +86,7 @@
   margin: 0 auto;
   padding-top: 65px;
   padding-bottom: 20px;
-  background: #70b447 url("../../img/gift-photo-mobile@1x.jpg");
+  background: #70b447 url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -101,6 +110,13 @@
   font-family: $secondary-font;
   text-align: center;
   color: #ffffff;
+}
+
+.additional-products__button {
+  width: 100%;
+  position: relative;
+  top: -3px;
+  font-size: 16px;
 }
 
 @media (min-width: $tablet-width) {
@@ -171,7 +187,7 @@
     width: auto;
     min-height: 200px;
     padding: 72px 124px 72px 90px;
-    background-image: url("../../img/gift-photo-tablet@1x.jpg");
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-position: center;
     background-size: cover;
 
@@ -252,7 +268,7 @@
     flex-direction: column;
     width: 245px;
     padding: 65px 43px 42px;
-    background-image: url("../../img/gift-photo-desktop@1x.jpg");
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/gift-photo-desktop@2x.jpg");
