--- a/source/sass/blocks/cases.scss
+++ b/source/sass/blocks/cases.scss
@@ -1,3 +1,7 @@
+.cases {
+  margin-bottom: -10px;
+}
+
 .cases__wrapper {
   padding: 0 20px;
 }
@@ -58,7 +62,12 @@
 }
 
 .case__text {
-  margin: 0 0 15px;
+  // margin: 0 0 15px;
+  // padding-bottom: 20px;
+  // font-family: $secondary-font;
+  // border-bottom: 1px solid #d9d9d9;
+  margin: 0 0 20px;
+  padding-top: 3px;
   padding-bottom: 20px;
   font-family: $secondary-font;
   border-bottom: 1px solid #d9d9d9;
@@ -73,7 +82,7 @@
   &--slim {
     left: 30px;
     width: 35px;
-    height: 49px;
+    height: 56px;
   }
 
   &--pro {
@@ -149,6 +158,7 @@
   }
 
   .cases__item {
+    margin-top: 19px;
     width: 570px;
     margin-right: 80px;
     margin-bottom: 20px;
@@ -156,6 +166,7 @@
     padding-left: 52px;
 
     &:nth-of-type(2n) {
+      margin-top: -19px;
       margin-right: 0;
     }
 
