--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -7,11 +7,13 @@
 }
 
 .contacts__wrapper {
-  padding: 28px 20px;
+  padding: 27px 20px 13px;
 }
 
 .contacts__address {
-  margin: 0;
+  // margin: 0;
+  margin-left: 6px;
+  margin-top: 2px;
   line-height: 1.4;
   font-family: $secondary-font;
 }
@@ -60,6 +62,7 @@
 
 @media (min-width: $desktop-width) {
   .contacts {
+    margin-top: 13px;
     position: relative;
   }
 
