--- a/source/sass/blocks/field-radio.scss
+++ b/source/sass/blocks/field-radio.scss
@@ -38,14 +38,23 @@
 }
 
 .field-radio__input-element {
-  position: relative;
+  // position: relative;
 
+  // display: block;
+  // flex-shrink: 0;
+  // width: 30px;
+  // height: 30px;
+  // margin-right: 16px;
+
+  // border: 1px solid #cdcdcd;
+  // border-radius: 50%;
+
+  position: relative;
   display: block;
   flex-shrink: 0;
   width: 30px;
   height: 30px;
-  margin-right: 16px;
-
+  margin-right: 14px;
   border: 1px solid #cdcdcd;
   border-radius: 50%;
 
