--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   width: calc(100% - 80px);
-  margin-bottom: 15px;
+  margin-bottom: 13px;
   padding-left: 20px;
 }
 
@@ -118,10 +118,24 @@
   }
 
   .main-nav__link {
-    margin-left: 24px;
+    // margin-left: 24px;
+    // padding: 0;
+    // font-weight: 400;
+    // font-size: 18px;
+    // line-height: 1.4;
+    //------------------
+    // margin-left: 19px;
+    // padding: 0;
+    // font-weight: 400;
+    // font-size: 18px;
+    // margin-right: 13px;
+    // line-height: 1.4;
+
+    margin-left: 25px;
     padding: 0;
     font-weight: 400;
     font-size: 18px;
+    margin-right: 7px;
     line-height: 1.4;
 
     &--active {
@@ -152,6 +166,27 @@
 }
 
 @media (min-width: $desktop-width) {
+
+  .main-nav__list {
+    width: 467px;
+  }
+
+  .main-nav__item {
+    border-top: none;
+    margin-right: 3px;
+
+    &:first-child{
+      margin-left: -45px;
+    }
+  }
+
+  .main-nav__item {
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
   .main-nav--index-page {
     .main-nav__link {
       color: #ffffff;
@@ -160,5 +195,9 @@
     .main-nav__link--active::before {
       background: #ffffff;
     }
+  }
+
+  .main-nav__link {
+    font-size: 20px;
   }
 }
