--- a/source/sass/blocks/page-wrapper.scss
+++ b/source/sass/blocks/page-wrapper.scss
@@ -16,11 +16,14 @@
       z-index: -1;
       width: 50%;
       height: 696px;
-      background: $color-index-bg url("../img/index-background-desktop@1x.jpg") no-repeat right top;
+      background: $color-index-bg url("../img/index-background-desktop@1x.jpg") no-repeat left top;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        background-image: url("../../img/index-background-desktop@2x.jpg");
-        background-size: 305px auto;
+        // background-image: url("../img/index-background-desktop@2x.jpg");
+        // background-position: left top;
+        background: #64a83b url(../img/index-background-desktop@2x.jpg) no-repeat left top;
+        background-size: 709px auto;
+        background-position-x: 0;
       }
     }
   }
