--- a/source/sass/blocks/product-catalog.scss
+++ b/source/sass/blocks/product-catalog.scss
@@ -13,6 +13,7 @@
 }
 
 .product-catalog__item {
+  max-height: 209px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -20,25 +21,46 @@
   border-bottom: 1px solid #ededed;
 }
 
+.product-catalog__image {
+  // position: relative;
+  // top: -23px;
+  position: relative;
+  top: -23px;
+}
+
 .product-catalog__item--extra {
   .product-catalog__desc {
+    // width: auto;
+    // margin-top: 0;
+    // margin-bottom: 20px;
+    // font-size: 12px;
+    // font-family: $secondary-font;
+    // text-align: center;
+
     width: auto;
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 42px;
     font-size: 12px;
     font-family: $secondary-font;
     text-align: center;
   }
 
   .product-catalog__title {
+    // max-width: initial;
+    // margin: 0;
+    // margin-bottom: 10px;
+    // text-align: center;
     max-width: initial;
     margin: 0;
-    margin-bottom: 10px;
+    margin-top: 2px;
+    margin-bottom: 9px;
     text-align: center;
   }
 
   .product-catalog__pic {
     margin-bottom: 25px;
+    position: relative;
+    top: 4px;
   }
 
   .product-catalog__inner {
@@ -71,6 +93,7 @@
 }
 
 .product-catalog__table {
+  margin-top: 13px;
   display: flex;
   flex-direction: column;
 }
@@ -84,6 +107,9 @@
 
 .product-catalog__button {
   width: 100%;
+  position: relative;
+  top: -22px;
+  font-size: 16px;
 }
 
 @media (min-width: $tablet-width) {
