--- a/source/sass/blocks/product-table.scss
+++ b/source/sass/blocks/product-table.scss
@@ -1,7 +1,13 @@
 .product-table__row {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 16px;
+  // padding-top: 5px;
+  // padding-bottom: 5px;
+  // font-size: 12px;
+  // line-height: 1;
+  // border-bottom: 1px solid #dedede;
+
+  padding-top: 0px;
+  padding-bottom: 2px;
+  font-size: 12px;
   line-height: 1;
-  border-bottom: 1px solid #dedede;
+  /* border-bottom: 1px solid #dedede; */
 }
