--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -2,11 +2,20 @@
   list-style-type: none;
   display: flex;
   transform: translateX(0);
+  margin-bottom: 15px;
 }
 
 .slider__item {
   flex-shrink: 0;
   width: 100%;
+  // flex-shrink: 0;
+  // width: 115%;
+  // /* width: 356px; */
+  // /* padding-right: 8px; */
+  // margin-right: -16px;
+  // position: relative;
+  // left: -21px;
+  // top: -6px;
 }
 
 .slider__picture {
@@ -32,6 +41,7 @@
   border: none;
   outline: none;
   cursor: pointer;
+  margin-left: 6px;
 }
 
 .slider__controls-bar {
