--- a/source/sass/blocks/page-wrapper.scss
+++ b/source/sass/blocks/page-wrapper.scss
@@ -19,9 +19,7 @@
       background: $color-index-bg url("../img/index-background-desktop@1x.jpg") no-repeat left top;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-        // background-image: url("../img/index-background-desktop@2x.jpg");
-        // background-position: left top;
-        background: #64a83b url(../img/index-background-desktop@2x.jpg) no-repeat left top;
+        background: #64a83b url("../img/index-background-desktop@2x.jpg") no-repeat left top;
         background-size: 709px auto;
         background-position-x: 0;
       }
